hphp/hack/test/typecheck/shape_modified5.php.like_types.exp
File "shape_modified5.php", line 23, characters 12-13:
Invalid return type (Typing[4110])
File "shape_modified5.php", line 17, characters 27-34:
Expected ~shape('x' => int, 'y' => bool) because it is an unenforceable type
File "shape_modified5.php", line 18, characters 8-22:
But got shape('x' => int)
